--- a/14_arrays/14_arrays.csproj
+++ b/14_arrays/14_arrays.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{36B02D37-7225-44E6-A826-E045D8B09A94}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>_14_arrays</RootNamespace>
-    <AssemblyName>_14_arrays</AssemblyName>
+    <AssemblyName>14_arrays</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
